Add user welcome by first name

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <h1 class="title">Travel Tracker</h1>
-      <h2 class="welcome">Welcome User</h2>
+      <h2 id="welcome" class="welcome">Welcome User</h2>
       <p class="amount-spent">You have spent ... traveling</p>
     </header>
     <nav>
