--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
   <body>
     <header>
       <h1 class="title">Travel Tracker</h1>
-      <h2 id="welcome" class="welcome">Welcome User</h2>
-      <p class="amount-spent">You have spent ... traveling</p>
+      <h2 id="welcome" class="welcome"></h2>
+      <p id="amountSpent"class="amount-spent"></p>
     </header>
     <nav>
       <button type="button" class="dashboard-button">Dashboard</button>
@@ -22,21 +22,29 @@
         <header>
           <h3 class="trip-header">Past trips</h3>
         </header>
+        <ul id="pastTripList"class="trip-list">
+        </ul>
       </section>
       <section class="ongoing-trips trip-box">
         <header>
           <h3 class="trip-header">Ongoing trips</h3>
         </header>
+        <ul id="ongoingTripList"class="trip-list">
+        </ul>
       </section>
       <section class="upcoming-trips trip-box">
         <header>
           <h3 class="trip-header">Upcoming trips</h3>
         </header>
+        <ul id="upcomingTripList"class="trip-list">
+        </ul>
       </section>
       <section class="pending-trips trip-box">
         <header>
           <h3 class="trip-header">Pending trips</h3>
         </header>
+        <ul id="pendingTripList"class="trip-list">
+        </ul>
       </section>
     </main>
 
