--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
       <h1 class="title">Travel Tracker</h1>
       <h2 id="welcome" class="welcome"></h2>
       <p id="amountSpent"class="amount-spent"></p>
+      <p id="todaysDate"class="todays-date">Todays Date: 2020/3/28</p>
     </header>
     <nav>
       <button type="button" class="dashboard-button">Dashboard</button>
