Add scrollable destination list

--- a/src/index.html
+++ b/src/index.html
@@ -58,8 +58,8 @@
     <h3>Number of travelers</h3>
     <input type="number" name="" value="">
     <h3>Destinations</h3>
-    <ul class="destination-list">
-    </ul>
+    <section id="destinationList" class="destination-list">
+    </section>
     <button id="tripRequestButton" type="button" class="make-trip-request-button">Make trip request</button>
   </form>
 
