All data for post request is available

--- a/src/index.html
+++ b/src/index.html
@@ -52,17 +52,16 @@
   </main>
   <form id="tripRequestForm" class="trip-request-form hidden" action="index.html" method="post">
     <h3>Select start date</h3>
-    <input type="date" name="" value="">
+    <input id="startDate" type="date" name="" value="">
     <h3>Trip duration(days)</h3>
-    <input type="number" name="" value="">
+    <input id="duration" type="number" name="" value="">
     <h3>Number of travelers</h3>
-    <input type="number" name="" value="">
-    <h3>Destinations</h3>
+    <input id="travelers" type="number" name="" value="">
+    <h3>Destinations (please select one)</h3>
     <section id="destinationList" class="destination-list">
     </section>
     <button id="tripRequestButton" type="button" class="make-trip-request-button">Make trip request</button>
   </form>
-
 </body>
 
 </html>
