Add functiionality so a user will see the details of their trip after selecting a destination

--- a/src/index.html
+++ b/src/index.html
@@ -60,6 +60,9 @@
     <h3>Destinations (please select one)</h3>
     <section id="destinationList" class="destination-list">
     </section>
+    <h3>Trip Details</h3>
+    <section id="tripDetails" class="trip-details">
+    </section>
     <button id="tripRequestButton" type="button" class="make-trip-request-button">Make trip request</button>
   </form>
 </body>
