--- a/src/index.html
+++ b/src/index.html
@@ -51,11 +51,11 @@
     </section>
   </main>
   <form id="tripRequestForm" class="trip-request-form hidden" action="index.html" method="post">
-    <h3>Select start date</h3>
+    <label for="startDate">Select start date</label>
     <input id="startDate" type="date" name="" value="">
-    <h3>Trip duration(days)</h3>
+    <label for="duration">Trip duration(days)</label>
     <input id="duration" type="number" name="" value="">
-    <h3>Number of travelers</h3>
+    <label for="travelers">>Number of travelers</label>
     <input id="travelers" type="number" name="" value="">
     <h3>Destinations (please select one)</h3>
     <section id="destinationList" class="destination-list">
