Login feedback displayed in box and red

--- a/src/index.html
+++ b/src/index.html
@@ -81,10 +81,10 @@
           <label for="password">Password:</label>
           <input aria-required="true" id="password" class="password" type="password">
           <button id="loginButton" type="button" class="login-button">Login</button>
+          <p class="feedback" id="feedback"></p>
         </div>
       </div>
     </form>
-    <p id="feedback"></p>
   </section>
 </body>
 
